fix: wrap date and time inputs into labels

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -174,7 +174,12 @@
 input[type="date"]::-webkit-calendar-picker-indicator,
 input[type="time"]::-webkit-calendar-picker-indicator {
     opacity: 0;
-    pointer-events: none;
+    pointer-events: auto;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
 }
 
 input::-webkit-clear-button,
